kluctl/services/go-backend/manifests/Middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefixes-golang
  namespace: ai-tools
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /api/golang
