kluctl/services/go-backend/manifests/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: go-backend
  namespace: ai-tools
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      # We can use "sharedVars.hostName" kluctl variable to sepcifcy the
      # host if you set a DNS record for the ExternalIP and your own domain
      match: PathPrefix(`/api/go`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: go-backend
          port: 8000
          scheme: http
